# gutmetrics

./: .gitignore  Makefile  README.md  pyproject.toml
src/gutmetrics/: __init__.py
src/gutmetrics/analysis/: __init__.py  classification.py  correlation.py  regression.py
src/gutmetrics/preprocessing/: __init__.py  cleaning.py  scaling.py
src/gutmetrics/utils/: __init__.py  stats.py
src/gutmetrics/visualization/: __init__.py  heatmaps.py  plots.py
tests/: __init__.py
tests/preprocessing/: __init__.py  test_cleaning.py  test_scaling.py
